cmake_minimum_required(VERSION 3.6)
project(apue)

include_directories(include)

add_subdirectory(advio)
add_subdirectory(daemons)
add_subdirectory(datafiles)
add_subdirectory(db)
add_subdirectory(environ)
add_subdirectory(exercises)
add_subdirectory(filedir)
add_subdirectory(fileio)
add_subdirectory(include)
add_subdirectory(intro)
add_subdirectory(ipc1)
add_subdirectory(ipc2)
add_subdirectory(lib)
add_subdirectory(printer)
add_subdirectory(proc)
add_subdirectory(pty)
add_subdirectory(relation)
add_subdirectory(signals)
add_subdirectory(sockets)
add_subdirectory(standards)
add_subdirectory(stdio)
add_subdirectory(termios)
add_subdirectory(threadctl)
add_subdirectory(threads)
