include_directories(${libapue_SOURCE_DIR} ${apue_SOURCE_DIR}/include)
add_executable(access access.c)
target_link_libraries(access apue)
add_executable(cdpwd cdpwd.c)
target_link_libraries(cdpwd apue)
add_executable(changemod changemod.c)
target_link_libraries(changemod apue)
add_executable(devrdev devrdev.c)
target_link_libraries(devrdev apue)
add_executable(filetype filetype.c)
target_link_libraries(filetype apue)
add_executable(ftw8 ftw8.c)
target_link_libraries(ftw8 apue)
add_executable(mycd mycd.c)
target_link_libraries(mycd apue)
add_executable(umask umask.c)
target_link_libraries(umask apue)
add_executable(unlink unlink.c)
target_link_libraries(unlink apue)
add_executable(zap zap.c)
target_link_libraries(zap apue)