include_directories(${libapue_SOURCE_DIR} ${apue_SOURCE_DIR}/include)
add_executable(fileflags fileflags.c)
target_link_libraries(fileflags apue)
add_executable(hole hole.c)
target_link_libraries(hole apue)
add_executable(fileio_mycat mycat.c)
target_link_libraries(fileio_mycat apue)
add_executable(seek seek.c)
target_link_libraries(seek apue)
add_executable(fileio_setfl setfl.c)
target_link_libraries(fileio_setfl apue)