include_directories(${libapue_SOURCE_DIR} ${apue_SOURCE_DIR}/include)
add_executable(add2 add2.c)
target_link_libraries(add2 apue)
add_executable(add2stdio add2stdio.c)
target_link_libraries(add2stdio apue)
add_executable(devzero devzero.c)
target_link_libraries(devzero apue)
add_executable(myuclc myuclc.c)
target_link_libraries(myuclc apue)
add_executable(pipe1 pipe1.c)
target_link_libraries(pipe1 apue)
add_executable(pipe2 pipe2.c)
target_link_libraries(pipe2 apue)
add_executable(pipe4 pipe4.c)
target_link_libraries(pipe4 apue)
add_executable(ipc1_popen popen.c)
target_link_libraries(ipc1_popen apue)
add_executable(popen1 popen1.c)
target_link_libraries(popen1 apue)
add_executable(popen2 popen2.c)
target_link_libraries(popen2 apue)
add_executable(slock slock.c)
target_link_libraries(slock apue)
add_executable(ipc1_tellwait tellwait.c)
target_link_libraries(ipc1_tellwait apue)
add_executable(tshm tshm.c)
target_link_libraries(tshm apue)