include_directories(${libapue_SOURCE_DIR} ${apue_SOURCE_DIR}/include)

add_executable(echoall echoall.c)
target_link_libraries(echoall apue)
add_executable(exec1 exec1.c)
target_link_libraries(exec1 apue)
add_executable(exec2 exec2.c)
target_link_libraries(exec2 apue)
add_executable(fork1 fork1.c)
target_link_libraries(fork1 apue)
add_executable(fork2 fork2.c)
target_link_libraries(fork2 apue)
add_executable(nice nice.c)
target_link_libraries(nice apue)
add_executable(pracct pracct.c)
target_link_libraries(pracct apue)
add_executable(pruids pruids.c)
target_link_libraries(pruids apue)
add_executable(proc_system system.c)
target_link_libraries(proc_system apue)
add_executable(systest1 systest1.c)
target_link_libraries(systest1 apue)
add_executable(systest3 systest3.c)
target_link_libraries(systest3 apue)
add_executable(tellwait1 tellwait1.c)
target_link_libraries(tellwait1 apue)
add_executable(tellwait2 tellwait2.c)
target_link_libraries(tellwait2 apue)
add_executable(test1 test1.c)
target_link_libraries(test1 apue)
add_executable(times1 times1.c)
target_link_libraries(times1 apue)
add_executable(vfork1 vfork1.c)
target_link_libraries(vfork1 apue)
add_executable(wait1 wait1.c)
target_link_libraries(wait1 apue)