include_directories(${libapue_SOURCE_DIR} ${apue_SOURCE_DIR}/include)
add_executable(abort abort.c)
target_link_libraries(abort apue)
add_executable(child child.c)
target_link_libraries(child apue)
add_executable(critical critical.c)
target_link_libraries(critical apue)
add_executable(mask mask.c)
target_link_libraries(mask apue)
add_executable(read1 read1.c)
target_link_libraries(read1 apue)
add_executable(read2 read2.c)
target_link_libraries(read2 apue)
add_executable(reenter reenter.c)
target_link_libraries(reenter apue)
add_executable(setops setops.c)
target_link_libraries(setops apue)
add_executable(sigtstp sigtstp.c)
target_link_libraries(sigtstp apue)
add_executable(sigusr sigusr.c)
target_link_libraries(sigusr apue)
add_executable(sleep1 sleep1.c)
target_link_libraries(sleep1 apue)
add_executable(sleep2 sleep2.c)
target_link_libraries(sleep2 apue)
add_executable(suspend1 suspend1.c)
target_link_libraries(suspend1 apue)
add_executable(suspend2 suspend2.c)
target_link_libraries(suspend2 apue)
add_executable(system system.c)
target_link_libraries(system apue)
add_executable(systest2 systest2.c)
target_link_libraries(systest2 apue)
add_executable(tsleep2 tsleep2.c)
target_link_libraries(tsleep2 apue)