include_directories(${libapue_SOURCE_DIR} ${apue_SOURCE_DIR}/include)
add_executable(clconn clconn.c)
target_link_libraries(clconn apue)
add_executable(clconn2 clconn2.c)
target_link_libraries(clconn2 apue)
add_executable(findsvc findsvc.c)
target_link_libraries(findsvc apue)
add_executable(initsrv1 initsrv1.c)
target_link_libraries(initsrv1 apue)
add_executable(initsrv2 initsrv2.c)
target_link_libraries(initsrv2 apue)
add_executable(ruptime-dg ruptime-dg.c)
target_link_libraries(ruptime-dg apue)
add_executable(ruptime ruptime.c)
target_link_libraries(ruptime apue)
add_executable(ruptimed-dg ruptimed-dg.c)
target_link_libraries(ruptimed-dg apue)
add_executable(ruptimed-fd ruptimed-fd.c)
target_link_libraries(ruptimed-dg apue)
add_executable(ruptimed ruptimed.c)
target_link_libraries(ruptimed apue)