include_directories(${libapue_SOURCE_DIR} ${apue_SOURCE_DIR}/include)
add_executable(csize csize.c)
target_link_libraries(csize apue)
add_executable(ctermid ctermid.c)
target_link_libraries(ctermid apue)
add_executable(getpass getpass.c)
target_link_libraries(getpass apue)
add_executable(isatty isatty.c)
target_link_libraries(isatty apue)
add_executable(settty settty.c)
target_link_libraries(settty apue)
add_executable(t_getpass t_getpass.c)
target_link_libraries(t_getpass apue)
add_executable(t_isatty t_isatty.c)
target_link_libraries(t_isatty apue)
add_executable(t_raw t_raw.c)
target_link_libraries(t_raw apue)
add_executable(t_ttyname t_ttyname.c)
target_link_libraries(t_ttyname apue)
add_executable(ttyname ttyname.c)
target_link_libraries(ttyname apue)
add_executable(winch winch.c)
target_link_libraries(winch apue)