include_directories(${libapue_SOURCE_DIR} ${apue_SOURCE_DIR}/include)
add_executable(atfork atfork.c)
target_link_libraries(atfork apue)
add_executable(detach detach.c)
target_link_libraries(detach apue)
add_executable(getenv1 getenv1.c)
target_link_libraries(getenv1 apue)
add_executable(getenv2 getenv2.c)
target_link_libraries(getenv2 apue)
add_executable(getenv3 getenv3.c)
target_link_libraries(getenv3 apue)
add_executable(suspend suspend.c)
target_link_libraries(suspend apue)
add_executable(timeout timeout.c)
target_link_libraries(timeout apue)