include_directories(${libapue_SOURCE_DIR} ${apue_SOURCE_DIR}/include)
add_executable(badexit2 badexit2.c)
target_link_libraries(badexit2 apue)
add_executable(barrier barrier.c)
target_link_libraries(barrier apue)
add_executable(cleanup cleanup.c)
target_link_libraries(cleanup apue)
add_executable(condvar condvar.c)
target_link_libraries(condvar apue)
add_executable(exitstatus exitstatus.c)
target_link_libraries(exitstatus apue)
add_executable(maketimeout maketimeout.c)
target_link_libraries(maketimeout apue)
add_executable(mutex1 mutex1.c)
target_link_libraries(mutex1 apue)
add_executable(mutex2 mutex2.c)
target_link_libraries(mutex2 apue)
add_executable(mutex3 mutex3.c)
target_link_libraries(mutex3 apue)
add_executable(rwlock rwlock.c)
target_link_libraries(rwlock apue)
add_executable(threadid threadid.c)
target_link_libraries(threadid apue)
add_executable(timedlock timedlock.c)
target_link_libraries(timedlock apue)